Change in the desgin of the registration email

--- a/assets/HTML/registerclient.html
+++ b/assets/HTML/registerclient.html
@@ -52,9 +52,12 @@
 
 
                     <div class="form-wrapper container">
-
                         <button type="submit" name="registerNewMember" value="Register">Register</button>
+                    </div>
+                </div>
             </form>
+        </div>
+    </div>
 </body>
 
 </html>
