Partial Implementation of the Login
Created the functions concerning the login without testing and without connecting the flow of events

--- a/assets/HTML/login.html
+++ b/assets/HTML/login.html
@@ -14,12 +14,12 @@
             <div class="image-holder">
                 <img src="assets/img/registerLogin/reg3.jpg" alt="">
             </div>
-            <form action="LoginSubmit" method="post">
+            <form action="LoginSubmit" method="GET">
 
                 <h3>Login</h3>
 
                     <div class="form-wrapper">
-                        <input type="text" placeholder="Email Address" name="email" class="form-control">
+                        <input type="text" placeholder="Email Address" name="mail" class="form-control">
                         <i class="fa fa-envelope-o" aria-hidden="true"></i>
                     </div>
                     <div class="form-wrapper">
