Login Process complete
Finished the login Process

--- a/assets/HTML/login.html
+++ b/assets/HTML/login.html
@@ -23,7 +23,7 @@
                         <i class="fa fa-envelope-o" aria-hidden="true"></i>
                     </div>
                     <div class="form-wrapper">
-                        <input type="password" placeholder="Password"
+                        <input type="password" name="password" placeholder="Password"/>
                     </div>
 
                     <div class="form-wrapper container">
