Added Bundle button

--- a/assets/HTML/registerclient.html
+++ b/assets/HTML/registerclient.html
@@ -50,7 +50,15 @@
                 <div class="form-wrapper">
                     <input type="text" placeholder="Email Address" name="email" class="form-control">
                     <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                </div>
 
+                <div class="form-wrapper">
+                    <select name="bundle" id="" class="form-control">
+                        <option value="" disabled selected>Membership Bundle</option>
+                        <option value="bundle1" name="bundle">Bundle 1: 100 Lbp</option>
+                        <option value="bundle2" name="bundle">Bundle 2: 150 Lbp</option>
+                    </select>
+                    <i class="fa fa-arrow-down" aria-hidden="true"></i>
                 </div>
                 <button type="submit" name="registerNewMember" value="Register">Next</button>
 
