Select membership bundle select style

--- a/assets/HTML/registerclient.html
+++ b/assets/HTML/registerclient.html
@@ -54,7 +54,7 @@
 
                 <div class="form-wrapper">
                     <select name="bundle" id="" class="form-control">
-                        <option value="" disabled selected>Membership Bundle</option>
+                        <option value="" disabled selected>Select membership bundle</option>
                         <option value="bundle1" name="bundle">Bundle 1: 100 Lbp</option>
                         <option value="bundle2" name="bundle">Bundle 2: 150 Lbp</option>
                     </select>
