--- a/assets/HTML/userList.html
+++ b/assets/HTML/userList.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="icon" type="image/png" href="../assets/images/favicon.png">
   <title>
-    Dashboard by Creative Tim
+   userList
   </title>
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
