--- a/assets/HTML/dashboard.html
+++ b/assets/HTML/dashboard.html
@@ -162,7 +162,7 @@
       </div>
       <div class="row mt-4">
         <div class="col-lg-3">
-          <a href="sign-up.html">
+          <a href="newMember">
             <div class="overflow-hidden position-relative border-radius-lg bg-cover h-50"
               style="background-image: url('assets/images/addNewMember.jpg');">
               <span class="mask bg-gradient-dark"></span>
