Login/Registration Bugs Fix and UI implementation
Fixed few bugs related to the registration and login process and made connection between FrontEnd and BackEnd

--- a/assets/HTML/login.html
+++ b/assets/HTML/login.html
@@ -21,13 +21,13 @@
 				<div class="image-holder">
 					<img src="assets/images/addNewCoach.jpg" alt="">
 				</div>
-				<form action="login" method="post">
+				<form action="LoginSubmit" method="get">
                     <div class="login">
 					<h3>Welcome to Power Lab</h3>
                     <h2>Login Here</h2>
 					
 					<div class="form-wrapper">
-						<input type="text" placeholder="Email Address" class="form-control" name="email">
+						<input type="text" placeholder="Email Address" class="form-control" name="mail">
 						<i class="zmdi zmdi-email"></i>
 					</div>
 				
