--- a/assets/HTML/registerclient.html
+++ b/assets/HTML/registerclient.html
@@ -59,7 +59,7 @@
     </nav>
     <!-- End Navbar -->
     <div class="wrapper">
-      <form action="register" method="post" style="margin-top: -5%; margin-left: auto; margin-right: auto; ">
+      <form action="registerNewMember" method="post" style="margin-top: -5%; margin-left: auto; margin-right: auto; ">
 
         <h3>Register Here</h3>
 
