--- a/assets/HTML/dashboard.html
+++ b/assets/HTML/dashboard.html
@@ -167,7 +167,7 @@
               style="background-image: url('assets/images/addNewMember.jpg');">
               <span class="mask bg-gradient-dark"></span>
               <div class="card-body position-relative z-index-1 d-flex flex-column h-50 p-4">
-                <h5 class="text-white font-weight-bolder mb-4  text-center ">Add new Member</h5>
+                <h5 class="text-white font-weight-bolder mb-4  text-center ">New Member</h5>
                 <i class="fas fa-arrow-right text-sm ms-1" aria-hidden="true"></i>
           </a>
 
@@ -180,7 +180,7 @@
           style="background-image: url('assets/images/addNewCoach.jpg');">
           <span class="mask bg-gradient-dark"></span>
           <div class="card-body position-relative z-index-1 d-flex flex-column h-50 p-3">
-            <h5 class="text-white font-weight-bolder mb-4 pt-2 text-center">Add new Coach</h5>
+            <h5 class="text-white font-weight-bolder mb-4 pt-2 text-center">New Coach</h5>
             <i class="fas fa-arrow-right text-sm ms-1" aria-hidden="true"></i>
       </a>
     </div>
