Product UI adjusted

--- a/assets/HTML/addproduct.html
+++ b/assets/HTML/addproduct.html
@@ -21,13 +21,13 @@
 						<div class="uk-width-1-1@s">
 							<label class="uk-form-label" name="name" for="txtModel">Name</label>
 							<div class="uk-form-controls">
-								<input class="uk-input" id="txtModel" type="text" placeholder="P40 Warhawk">
+								<input class="uk-input borderbott" id="txtModel" type="text" placeholder="Protein Shake">
 							</div>
 						</div>
                         <div class="uk-margin">
 							<label class="uk-form-label" for="txtYear">Price in Lbp</label>
 							<div class="uk-form-controls">
-								<input class="uk-input" id="txtYear" name="price" type="number" placeholder="1938">
+								<input class="uk-input borderbott" id="txtYear" name="price" type="number" placeholder="50000">
 							</div>
 						</div>
 						<div class="uk-margin">
