Membership with navbar

--- a/assets/HTML/registerclient.html
+++ b/assets/HTML/registerclient.html
@@ -90,19 +90,12 @@
         <div class="form-wrapper">
           <input type="text" placeholder="Email Address" name="email" class="form-control">
         </div>
-
-        <div class="form-wrapper">
-          <select name="bundle" id="" class="form-select form-control">
-            <option value="" disabled selected>Select membership bundle</option>
-            <option value="bundle1" name="bundle">Bundle 1: 100 Lbp</option>
-            <option value="bundle2" name="bundle">Bundle 2: 150 Lbp</option>
-          </select>
-        </div>
-        <button style="background-color: rgb(250, 250, 250); max-width:50%;border: 2px solid black;float: right;"
-          type="submit" name="registerNewMember" value="Register">Register</button>
+        <a href="registrationMembership">
+        <button style="background-color: rgb(0, 0, 0); width:30%;color:white;float: right;"
+          type="submit"  value="Next">Next</button></a>
       </form>
     </div>
-
+<!-- registerNewMembe -->
 
 </body>
 
