--- a/assets/HTML/membership.html
+++ b/assets/HTML/membership.html
@@ -1,122 +1,149 @@
 <html>
+
 <head>
 
     <meta charset="utf-8">
-    <title>Login</title>
+    <title>Registration-Bundles</title>
     <base href="http://localhost/GymWebsite/">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-
     <link rel="stylesheet" href="assets/css/membership.css">
+    <link rel="stylesheet" href="assets/fonts/material-design-iconic-font/css/material-design-iconic-font.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300&display=swap" rel="stylesheet">
+    <script src="https://use.fontawesome.com/8e773d205c.js"></script>
+    <!-- STYLE CSS -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
+    <!-- Font Awesome Icons -->
+    <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
+    <!-- CSS Files -->
+    <link id="pagestyle" href="assets/CSS/soft-ui-dashboard.css?v=1.0.3" rel="stylesheet" />
 
 </head>
 
-<body>
-    <div id="generic_price_table">
-        <section>
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="price-heading clearfix">
-                            <h1>Membership Bundles</h1>
-                        </div>
-                    </div>
-                </div>
+<body class="g-sidenav-show  bg-gray-100">
+    <aside class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3 "
+        id="sidenav-main">
+        <div class="sidenav-header">
+            <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none"
+                aria-hidden="true" id="iconSidenav"></i>
+            <a class="navbar-brand m-0" href="https://demos.creative-tim.com/soft-ui-dashboard/pages/dashboard.html"
+                target="_blank">
+                <span class="ms-1 font-weight-bold">Dashboard</span>
+            </a>
+        </div>
+        <hr class="horizontal dark mt-0">
+        <div class="collapse navbar-collapse  w-auto  max-height-vh-100 h-100" id="sidenav-collapse-main">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link  active" href="assets/HTML/dashboard.html">
+                        <span class="nav-link-text ms-1">Dashboard</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </aside>
+    <main class="main-content position-relative max-height-vh-100 h-100 mt-1 border-radius-lg ">
+        <!-- Navbar -->
+        <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl" id="navbarBlur"
+            navbar-scroll="true">
+            <div class="container-fluid py-1 px-3">
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 me-sm-6 me-5">
+                        <li class="breadcrumb-item text-sm"><a class="opacity-5 text-dark"
+                                href="dashboard">Dashboard</a></li>
+                        <li class="breadcrumb-item text-sm text-dark active" aria-current="page">Registration</li>
+                    </ol>
+                </nav>
             </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="generic_content clearfix">
-                            <div class="generic_head_price clearfix">
-                                <div class="generic_head_content clearfix">
-                                    <div class="head_bg"></div>
-                                    <div class="head">
-                                        <span>Standard</span>
-                                    </div>
-                                </div>
-                                <div class="generic_price_tag clearfix">
-                                    <span class="price">
-                                        <span class="sign">$</span>
-                                        <span class="currency">199</span>
-                                        <span class="cent">.99</span>
-                                        <span class="month">/MON</span>
-                                    </span>
-                                </div>
-                            </div>
-                            <div class="generic_feature_list">
-                                <ul>
-                                    <li><span>2GB</span> Bandwidth</li>
-                                </ul>
-                            </div>
-
-                            <div class="generic_price_btn clearfix">
-                                <a class="" href="">Bundle 1</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="generic_content clearfix">
-                            <div class="generic_head_price clearfix">
-                                <div class="generic_head_content clearfix">
-                                    <div class="head_bg"></div>
-                                    <div class="head">
-                                        <span>Standard</span>
-                                    </div>
-                                </div>
-                                <div class="generic_price_tag clearfix">
-                                    <span class="price">
-                                        <span class="sign">$</span>
-                                        <span class="currency">199</span>
-                                        <span class="cent">.99</span>
-                                        <span class="month">/MON</span>
-                                    </span>
-                                </div>
-                            </div>
-                            <div class="generic_feature_list">
-                                <ul>
-                                    <li><span>2GB</span> Bandwidth</li>
-                                </ul>
-                            </div>
-
-                            <div class="generic_price_btn clearfix">
-                                <a class="" href="">Bundle 2</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="generic_content clearfix">
-                            <div class="generic_head_price clearfix">
-                                <div class="generic_head_content clearfix">
-                                    <div class="head_bg"></div>
-                                    <div class="head">
-                                        <span>Unlimited</span>
-                                    </div>
-                                </div>
-                                <div class="generic_price_tag clearfix">
-                                    <span class="price">
-                                        <span class="sign">$</span>
-                                        <span class="currency">299</span>
-                                        <span class="cent">.99</span>
-                                        <span class="month">/MON</span>
-                                    </span>
-                                </div>
-                            </div>
-                            <div class="generic_feature_list">
-                                <ul>
-                                    <li><span>2GB</span> Bandwidth</li>
-                                </ul>
-                            </div>
-                            <div class="generic_price_btn clearfix">
-                                <a class="" href="">Bundle 3</a>
+        </nav>
+        <!-- End Navbar -->
+        <div id="generic_price_table">
+            <section>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="price-heading clearfix">
+                                <h1>Membership Bundles</h1>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
-    </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="generic_content clearfix">
+                                <div class="generic_head_price clearfix">
+                                    <div class="generic_head_content clearfix">
+                                        <div class="head_bg"></div>
+                                        <div class="head">
+                                            <span>100,000</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="generic_feature_list">
+                                    <ul>
+                                        <li>Daily Gym Access</li>
+                                    </ul>
+                                </div>
+
+                                <div class="generic_price_btn clearfix">
+                                    <a class="" href="">Bundle 1</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="generic_content clearfix">
+                                <div class="generic_head_price clearfix">
+                                    <div class="generic_head_content clearfix">
+                                        <div class="head_bg"></div>
+                                        <div class="head">
+                                            <span>150,000</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="generic_feature_list">
+                                    <ul>
+                                        <li>Daily Gym</li>
+                                    </ul>
+                                </div>
+
+                                <div class="generic_price_btn clearfix">
+                                    <a class="" href="">Bundle 2</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="generic_content clearfix">
+                                <div class="generic_head_price clearfix">
+                                    <div class="generic_head_content clearfix">
+                                        <div class="head_bg"></div>
+                                        <div class="head">
+                                            <span>200,000</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="generic_feature_list">
+                                    <ul>
+                                        <li>Gym</li>
+                                    </ul>
+                                </div>
+                                <div class="generic_price_btn clearfix">
+                                    <a class="" href="">Bundle 3</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4">
+                        </div>
+                        <div class="col-md-4">
+                        </div>
+                        <button style="background-color: rgb(0, 0, 0); width:fit-content;margin-top:5%;
+                        margin-bottom:2%;color:white;margin-left: auto;margin-right: 2%;"
+                        type="submit" name="registerNewMember" value="Register">Register</button>
+                    </div>
+                </div>
+            </section>
+        </div>
 </body>
 
 </html>
